--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
-html{
+html,body{
     background-color:#2b2f38;
+    margin:0;
+    padding:0;
 }
 
 header{
     background-color: #232529;
-    font-size: 30px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:white;
-    margin:7px 0px;
-    padding:2px 2px 2px 5px;
+    margin:0;
+    padding:15px;
 }
 
+.result{
+    margin:10px 10px;
+}
 
 .code{
     font-size:16px;
@@ -18,7 +20,7 @@ header{
     border-collapse: collapse;
     margin:0px 5px 5px 5px;
     background-color: white;
-    padding:5px;
+    padding:10px;
     width:100%;
 }
 
@@ -27,8 +29,9 @@ header{
     border:solid black;
     border-collapse: collapse;
     margin:0px 5px 5px 5px;
-    padding:5px;
+    padding:10px;
     background-color: white;
+    overflow: auto;
 }
 
 .subject{
@@ -42,4 +45,18 @@ header{
     background-color: #078c26;
     color:white;
     width:fit-content;
+}
+
+#header-title{
+    font-size: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:white;
+    text-decoration: none;
+    color:white;
+}
+
+#about{
+    margin:0 20px;
+    text-decoration: none;
+    color: white;
 }
