--- a/style.css
+++ b/style.css
@@ -18,17 +18,18 @@ header{
     font-size:16px;
     border:solid black;
     border-collapse: collapse;
-    margin:0px 5px 5px 5px;
+    /*margin:0px 5px 5px 5px;*/
     background-color: white;
     padding:10px;
     width:100%;
+    box-sizing:border-box;
 }
 
 .preview{
     font-size:30px;
     border:solid black;
     border-collapse: collapse;
-    margin:0px 5px 5px 5px;
+    /*margin:0px 5px 5px 5px;*/
     padding:10px;
     background-color: white;
     overflow: auto;
