refactor css file

--- a/style.css
+++ b/style.css
@@ -48,16 +48,16 @@ header{
     width:fit-content;
 }
 
-#header-title{
-    font-size: 30px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:white;
+a{
     text-decoration: none;
     color:white;
 }
 
+#header-title{
+    font-size: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #about{
     margin:0 20px;
-    text-decoration: none;
-    color: white;
 }
