--- a/about.css
+++ b/about.css
@@ -10,17 +10,18 @@ header{
     padding:15px;
 }
 
-#header-title{
-    font-size: 30px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+a{
     text-decoration: none;
     color: white;
 }
 
+#header-title{
+    font-size: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #about{
     margin:0 20px;
-    text-decoration: none;
-    color: white;
 }
 
 .description{
