--- a/about.css
+++ b/about.css
@@ -22,9 +22,22 @@ a{
 
 #about{
     margin:0 20px;
+    color:#d9d9d9;
+}
+
+#about:hover{
+    color:white;
 }
 
 .description{
     margin:20px;
     color:white;
+}
+
+#creator{
+    color:#576ca1;
+}
+
+#creator:hover{
+    color:#6f88c9;
 }
